deploy/kubernetes.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketplace
  labels:
    app: marketplace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marketplace
  template:
    metadata:
      labels:
        app: marketplace
        version: v1
        istio.io/rev: v1-11-3
    spec:
      containers:
        - name: marketplace
          image: koza/marketplace:0.0.2
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendations-v1
  labels:
    app: recommendations
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendations
  template:
    metadata:
      labels:
        app: recommendations
        version: v1
        istio.io/rev: v1-11-3
    spec:
      containers:
        - name: recommendations
          image: koza/recommendations:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendations-v2
  labels:
    app: recommendations
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendations
  template:
    metadata:
      labels:
        app: recommendations
        version: v2
        istio.io/rev: v1-11-3
    spec:
      containers:
        - name: recommendations
          image: koza/recommendations:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 50051

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
  labels:
    app: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
        version: v1
        istio.io/rev: v1-11-3
    spec:
      containers:
        - name: account
          image: koza/account:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50050
---
apiVersion: v1
kind: Service
metadata:
  name: account
spec:
  type: ClusterIP
  selector:
    app: account
  ports:
    - name: grpc-account
      protocol: TCP
      port: 50050
      targetPort: 50050

---
apiVersion: v1
kind: Service
metadata:
  name: recommendations
spec:
  type: ClusterIP
  selector:
    app: recommendations
  ports:
    - name: grpc-recommendations
      protocol: TCP
      port: 50051
      targetPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: marketplace
spec:
  type: ClusterIP
  selector:
    app: marketplace
  ports:
    - name: http-marketplace
      protocol: TCP
      port: 8080
      targetPort: 8080
