deploy/postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        version: v1
        istio.io/rev: v1-11-3
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: pg-data
              readOnly: false
              mountPath: /var/lib/postgresql/data
          ports:
          - containerPort: 5432
      volumes:
      - name: pg-data
        persistentVolumeClaim:
          claimName: pg-data
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: tcp-postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
