deploy/istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grpc-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.tmp.com"

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grpc-gateway-https
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: tls-cert # must be the same as secret
    hosts:
    - "*.tmp.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: marketplace
spec:
  hosts:
    - "marketplace"
    - "m.tmp.com"
  gateways:
    - grpc-gateway
    - grpc-gateway-https
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: marketplace
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendations
spec:
  hosts:
    - "recommendations"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 50051
        subset: v1
        host: recommendations
      weight: 50
    - destination:
        port:
          number: 50051
        subset: v2
        host: recommendations
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recommendations
spec:
  host: recommendations
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: account
spec:
  hosts:
    - "account"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 50050
        host: account
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: account
spec:
  host: account
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
  subsets:
  - name: v1
    labels:
      version: v1
